Favoritos usuarios yup y securizacion de categorias
